<resources>
    <string name="app_name">MEMO</string>
    <string name="txtBemVindo">Bem vindo(a) ao MEMO</string>
    <string name="btnLogin">Entre</string>
    <string name="btnCad">Cadastre-se</string>
    <string name="txtOu">ou</string>
    <string name="txtCadastre">Cadastre-se</string>
    <string name="etEmail">E-mail</string>
    <string name="etDataNasc">Data de nascimento</string>
    <string name="etNumTel">Telefone</string>
    <string name="btnCadastrar">Cadastrar</string>
    <string name="etNome">Nome</string>
    <string name="txtEntrar">Entrar</string>
    <string name="etSenha">Senha</string>
    <string name="txtMemo">MEMO</string>
    <string name="txtCarregando">Carregando...</string>
    <string name="txtInicio">Aqui você pode adicionar tarefas ou marcá-las como concluídas</string>
    <string name="txtFeitas">Tarefas feitas</string>
    <string name="txtPendentes">Tarefas pendentes</string>
    <string name="btnModTarefa">Modificar tarefa pendente</string>
    <string name="btnAdicionar">Programar nova tarefa</string>
    <string name="btnVoltar">Voltar</string>
    <string name="txtAddTarefa">Adicionar tarefa</string>
    <string name="edtNomeTarefa">Nome da tarefa</string>
    <string name="btnAddTarefa">Adicionar</string>
    <string name="txtModTarefa">Modificar tarefa pendente</string>
    <string name="btnAttTarefa">Atualizar tarefa</string>
    <string name="btnTarefaFeita">Marcar como feita</string>
    <string name="btnTarefasProgramadas">Vizualizar tarefas programadas</string>
    <string name="btnTarefasDoDia">Vizualizar tarefas de hoje</string>
    <string name="btnPerfil">Vizualizar Perfil</string>
</resources>