<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradient_background"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/txtBemVindo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="92dp"
        android:text="@string/txtBemVindo"
        android:textColor="@color/telaFundo"
        android:textSize="@dimen/textSizeTitles"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btnLogin"
        android:layout_width="@dimen/btnsWidth"
        android:layout_height="@dimen/edtsHeight"
        android:layout_marginTop="300dp"
        android:backgroundTint="@color/azulEscuro"
        android:onClick="irLogin"
        android:text="@string/btnLogin"
        android:textColor="@color/telaFundo"
        android:textSize="@dimen/textSizeCommomTexts"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtBemVindo" />

    <TextView
        android:id="@+id/txtOu"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/txtOu"
        android:textColor="@color/texto"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnLogin" />

    <Button
        android:id="@+id/btnCad"
        android:layout_width="@dimen/btnsWidth"
        android:layout_height="@dimen/edtsHeight"
        android:layout_marginTop="20dp"
        android:backgroundTint="@color/ceruleo"
        android:onClick="irCad"
        android:text="@string/btnCad"
        android:textColor="@color/telaFundo"
        android:textSize="@dimen/textSizeCommomTexts"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtOu" />
</androidx.constraintlayout.widget.ConstraintLayout>