<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/main"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/gradient_background"
        tools:context=".ActivityCadUser">

        <ImageView
            android:id="@+id/imgPerfilCad"
            android:layout_width="155dp"
            android:layout_height="155dp"
            android:layout_marginTop="16dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/txtCadastre"
            app:srcCompat="@drawable/perfil" />

        <TextView
            android:id="@+id/txtCadastre"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="44dp"
            android:text="@string/txtCadastre"
            android:textColor="@color/telaFundo"
            android:textSize="@dimen/textSizeTitles"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.501"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/etNomeCad"
            android:layout_width="@dimen/edtsWidth"
            android:layout_height="@dimen/edtsHeight"
            android:layout_marginTop="20dp"
            android:ems="10"
            android:hint="@string/etNome"
            android:inputType="text"
            android:textColor="@color/texto"
            android:textColorHint="@color/hint"
            android:textSize="@dimen/textSizeCommomTexts"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.493"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imgPerfilCad" />

        <EditText
            android:id="@+id/etEmailCad"
            android:layout_width="@dimen/edtsWidth"
            android:layout_height="@dimen/edtsHeight"
            android:layout_marginTop="40dp"
            android:ems="10"
            android:hint="@string/etEmail"
            android:inputType="textEmailAddress"
            android:textColor="@color/texto"
            android:textColorHint="@color/hint"
            android:textSize="@dimen/textSizeCommomTexts"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.506"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/etNomeCad" />

        <EditText
            android:id="@+id/etDataNascCad"
            android:layout_width="@dimen/edtsWidth"
            android:layout_height="@dimen/edtsHeight"
            android:layout_marginTop="40dp"
            android:ems="10"
            android:hint="@string/etDataNasc"
            android:inputType="date"
            android:textColor="@color/texto"
            android:textColorHint="@color/hint"
            android:textSize="@dimen/textSizeCommomTexts"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.493"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/etEmailCad" />

        <EditText
            android:id="@+id/etNumTelCad"
            android:layout_width="@dimen/edtsWidth"
            android:layout_height="@dimen/edtsHeight"
            android:layout_marginTop="40dp"
            android:ems="10"
            android:hint="@string/etNumTel"
            android:inputType="number"
            android:textColor="@color/texto"
            android:textColorHint="@color/hint"
            android:textSize="@dimen/textSizeCommomTexts"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.506"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/etDataNascCad" />

        <EditText
            android:id="@+id/etSenhaCad"
            android:layout_width="@dimen/edtsWidth"
            android:layout_height="@dimen/edtsHeight"
            android:layout_marginTop="40dp"
            android:ems="10"
            android:hint="@string/etSenha"
            android:inputType="textPassword"
            android:textColor="@color/texto"
            android:textColorHint="@color/hint"
            android:textSize="@dimen/textSizeCommomTexts"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/etNumTelCad" />

        <Button
            android:id="@+id/btnCadastrar"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/edtsHeight"
            android:layout_marginTop="40dp"
            android:backgroundTint="@color/ceruleo"
            android:text="@string/btnCadastrar"
            android:textColor="@color/telaFundo"
            android:textSize="@dimen/textSizeCommomTexts"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/etSenhaCad" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>