<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/scrollView"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:backgroundTint="@color/telaFundo">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/main"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/telaFundo"
        android:backgroundTint="@color/telaFundo"
        tools:context=".ActivityVizualizarTarefas">

        <Button
            android:id="@+id/btnExcluirTarefaFeita"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/edtsHeight"
            android:layout_marginTop="45dp"
            android:backgroundTint="@color/ceruleo"
            android:onClick="excluirTarefaFeita"
            android:text="Excluir tarefa feita"
            android:textColor="@color/telaFundo"
            android:textSize="@dimen/textSizeCommomTexts"
            android:visibility="invisible"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.501"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/spinnerFeitas" />

        <TextView
            android:id="@+id/txtInicio"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="80dp"
            android:layout_marginEnd="10dp"
            android:text="@string/txtInicio"
            android:textAlignment="center"
            android:textColor="@color/texto"
            android:textSize="@dimen/textSizeCommomTexts"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.498"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/txtFeitas"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="60dp"
            android:text="@string/txtFeitas"
            android:textColor="@color/texto"
            android:textSize="@dimen/textSizeCommomTexts"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.498"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/txtInicio" />

        <Spinner
            android:id="@+id/spinnerFeitas"
            android:layout_width="@dimen/edtsWidth"
            android:layout_height="@dimen/edtsHeight"
            android:layout_marginTop="36dp"
            android:backgroundTint="@color/telaFundo"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/txtFeitas" />/>

        <TextView
            android:id="@+id/txtPendentes"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp"
            android:text="@string/txtPendentes"
            android:textColor="@color/texto"
            android:textSize="@dimen/textSizeCommomTexts"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/btnExcluirTarefaFeita" />

        <Spinner
            android:id="@+id/spinnerPendentes"
            android:layout_width="@dimen/edtsWidth"
            android:layout_height="@dimen/edtsHeight"
            android:layout_marginTop="36dp"
            android:backgroundTint="@color/telaFundo"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/txtPendentes" />/>

        <Button
            android:id="@+id/btnModTarefa"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/edtsHeight"
            android:layout_marginTop="45dp"
            android:backgroundTint="@color/ceruleo"
            android:onClick="modTarefa"
            android:text="@string/btnModTarefa"
            android:textColor="@color/telaFundo"
            android:textSize="@dimen/textSizeCommomTexts"
            android:visibility="invisible"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.496"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/spinnerPendentes" />

        <Button
            android:id="@+id/btnAdicionar"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/edtsHeight"
            android:layout_marginTop="40dp"
            android:backgroundTint="@color/ceruleo"
            android:onClick="addTarefa"
            android:text="@string/btnAdicionar"
            android:textColor="@color/telaFundo"
            android:textSize="@dimen/textSizeCommomTexts"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.496"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/btnModTarefa" />

        <Button
            android:id="@+id/btnVoltar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="36dp"
            android:backgroundTint="@color/ceruleo"
            android:onClick="voltar"
            android:text="@string/btnVoltar"
            android:textColor="@color/telaFundo"
            android:textSize="@dimen/textSizeCommomTexts"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.496"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/btnAdicionar" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>