<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradient_background"
    tools:context=".ActivityLogin">

    <EditText
        android:id="@+id/etEmailLogin"
        android:layout_width="330dp"
        android:layout_height="55dp"
        android:layout_marginTop="140dp"
        android:ems="10"
        android:hint="@string/etEmail"
        android:inputType="textEmailAddress"
        android:textColor="@color/texto"
        android:textColorHint="@color/hint"
        android:textSize="@dimen/textSizeCommomTexts"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.493"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtEntrar" />

    <Button
        android:id="@+id/btnEntrar"
        android:layout_width="175dp"
        android:layout_height="55dp"
        android:layout_marginTop="116dp"
        android:backgroundTint="#234daf"
        android:text="@string/txtEntrar"
        android:textColor="@color/telaFundo"
        android:textSize="@dimen/textSizeCommomTexts"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etSenhaLogin" />

    <EditText
        android:id="@+id/etSenhaLogin"
        android:layout_width="330dp"
        android:layout_height="55dp"
        android:layout_marginTop="44dp"
        android:ems="10"
        android:hint="@string/etSenha"
        android:inputType="textPassword"
        android:textColor="@color/texto"
        android:textColorHint="@color/hint"
        android:textSize="@dimen/textSizeCommomTexts"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.493"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etEmailLogin" />

    <TextView
        android:id="@+id/txtEntrar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="80dp"
        android:text="@string/txtEntrar"
        android:textColor="@color/telaFundo"
        android:textSize="@dimen/textSizeTitles"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>